Revision history for Dist::Zilla::Plugin::Git

{{$NEXT}}

1.102810  2010-10-08 18:01:32 Europe/Paris
 - add Git::NextVersion adapted from BumpVersionFromGit (dagolden)

1.102430  2010-08-31 17:12:24 Europe/Paris
 - fix rt#60740 - allow retrieval of applied tag in git (matt follett)

1.102380  2010-08-26 09:39:33 Europe/Paris
 - fix hang on windows (alexandr ciornii)

1.102090  2010-07-28 14:12:20 Europe/Paris
 - initialize a working git config in all tests

1.102040  2010-07-23 10:45:23 Europe/Paris
 - fix rt#59587 - cache buildroot to commit on master, not release
   branch (yanick champoux)

1.102020  2010-07-21 09:00:46 Europe/Paris
 - fix rt#59586 - there should be no release branch by default for git::commitbuild
   warning: this changes behaviour of git::commitbuild

1.102010  2010-07-20 11:00:36 Europe/Paris
 - fix rt#59505 - support for unstable git versions in push test skips

1.101801  2010-06-29 19:00:13 Europe/Paris
 - fix rt#56485 - skip push tests for old git versions

1.101800  2010-06-29 18:36:17 Europe/Paris
 - git::commitbuild - new release_branch option to commit result after a
   release (yanick champoux)
 - git::tag - tag can be applied to a different branch (yanick champoux)
 - fix rt#58876 - pod description out of date

1.101680  2010-06-17 17:17:07 Europe/Paris
 - fix rt# 58431 - remove git.pm prereq, use git::wrapper (yanick champoux)

1.101650  2010-06-14 16:08:41 Europe/Paris
 - basic aftermint plugin to git init while dzil new (jesse luehrs)
 - build commits have their original branch as parent (yanick champoux)

1.101330  2010-05-13 19:27:39 Europe/Paris
 - git::commit recognizes another changelog format (david golden)

1.101270  2010-05-07 16:56:27 Europe/Paris
 - fix brian's name in this file (sorry brian!)
 - make CommitBuild log error when build commit fails (michael schout)

1.101230  2010-05-03 17:10:17 Europe/Paris
 - support for committing results of build in a separate branch (brian phillips)